cargo-desugar/tests/ui/min_specialization.out
error[E0520]: `from` specializes an item from a parent `impl`, but that item is not marked `default`
  --> tests/ui/min_specialization.desugared.rs:20:5
   |
14 | impl<T> MyFrom<T> for () {
   | ------------------------ parent `impl` is here
...
20 |     fn from(_: ()) -> Self {
   |     ^^^^^^^^^^^^^^^^^^^^^^ cannot specialize default item `from`
   |
   = note: to specialize, `from` in the parent `impl` must be marked `default`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0520`.
